--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -3,18 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <div class="container";
 
-    <p class="h3 text-center">Dolgozat</p>
-    <p class="h2">Mennyi 3 nak a harmadik hatványa</p>
+    <p class="h3 text-center">Dolgozatkvizfeladat</p>
+    <p class="h2">1. Mennyi 3x2</p>
 
-    <table class="table"
-    <input type=""radio" id="1" name="gomb" value="55">
-    <label for="html">55</label>
+    <input type="radio" id="1" name="elso" value="60">
+    <label for="html">60</label><br>
+    <input type="radio" id="2" name="masodik" value="6">
+    <label for="css">6</label><br>
+    <input type="radio" id="3" name="harmadikk" value="24">
+    <label for="javascript">24</label><br>
+    <input type="radio" id="4" name="negyedik" value="55532">
+    <label for="javascript">55532</label>
+
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+    <p class="h2">Mi Portugália fővárosa</p>
+    <select nev="fovarosa" Size="7">
+        <option>Pécs</option>
+        <option>Balassagyarmat</option>
+        <option>Miskolc</option>
+        <option>Lisszabon</option>
+
+    </select>
+
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+
+    <p class="h2">Melyik csapat igazi focicsapat? </p>
+    <form>
+        <input type="checkbox" id="Kocs KSE"  value="Igen">
+        <labe> Kocs KSE</labe><br>
+        <input type="checkbox" id="Bőrszalonna"  value="Nem">
+        <label> Bőrszalonna</label><br>
+        <input type="checkbox" id="Real Margit"  value="Nem">
+        <label> Real Margit</label><br>
+      </form>
+
+
+
+
+
  
 
 
