--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -3,25 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <div class="container";
+<body style="background-color:powderblue;">
+    <div class="container">
 
-    <p class="h3 text-center">Dolgozatkvizfeladat</p>
-    <p class="h2">1. Mennyi 3x2</p>
-
-    <input type="radio" id="1" name="elso" value="60">
-    <label for="html">60</label><br>
-    <input type="radio" id="2" name="masodik" value="6">
-    <label for="css">6</label><br>
-    <input type="radio" id="3" name="harmadikk" value="24">
-    <label for="javascript">24</label><br>
-    <input type="radio" id="4" name="negyedik" value="55532">
-    <label for="javascript">55532</label>
-
+    <p class="h1 text-center">Kvizdolgozat0222</p>
+    
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
     <p class="h2">Mi Portugália fővárosa</p>
@@ -32,6 +24,18 @@
         <option>Lisszabon</option>
 
     </select>
+
+
+    <p class="h2">1. Mennyi 3x2</p>
+
+    <input type="radio" id="1" name="1" value="60">
+    <label for="html">60</label><br>
+    <input type="radio" id="2" name="1" value="6">
+    <label for="css">6</label><br>
+    <input type="radio" id="3" name="1" value="24">
+    <label for="javascript">24</label><br>
+    <input type="radio" id="4" name="1" value="55532">
+    <label for="javascript">55532</label>
 
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
@@ -47,12 +51,43 @@
       </form>
 
 
+      <hr style="height:2px;border-width:0;color:purple;background-color:gray">
+
+
+      <p class="h2">Hány éves leszek 10 év múlva ha 19 éves vagyok most? </p>
+      <form><input type="text" id="1"> </form>
+
+      <hr style="width:100%;text-align:left;margin-left:0">
+
+      <p class="h2">Hány éves voltam 10 évvel ezelőtt ha most 19 vagyok?</p>
+      <form><input type="text" id="2"> </form>
+
+
+      <hr style="width:100%;text-align:left;margin-left:0">
+
+
+      <button type="button" class="btn btn-danger">Teszt lezárása és válaszok beküldése</button>
+
+      <span id="válaszok"> </span>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
  
+    </div>
 
 
-
+      <script src="script.js"></script>
 </body>
+
 </html>
