--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -16,7 +16,7 @@
     
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-    <p class="h2">Mi Portugália fővárosa</p>
+    <p class="h2">1. Mi Portugália fővárosa</p>
     <select nev="fovarosa" Size="7">
         <option>Pécs</option>
         <option>Balassagyarmat</option>
@@ -26,7 +26,7 @@
     </select>
 
 
-    <p class="h2">1. Mennyi 3x2</p>
+    <p class="h2">2. Mennyi 3x2</p>
 
     <input type="radio" id="1" name="1" value="60">
     <label for="html">60</label><br>
@@ -40,7 +40,7 @@
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 
-    <p class="h2">Melyik csapat igazi focicsapat? </p>
+    <p class="h2">3. Melyik csapat igazi focicsapat? </p>
     <form>
         <input type="checkbox" id="Kocs KSE"  value="Igen">
         <labe> Kocs KSE</labe><br>
@@ -54,12 +54,12 @@
       <hr style="height:2px;border-width:0;color:purple;background-color:gray">
 
 
-      <p class="h2">Hány éves leszek 10 év múlva ha 19 éves vagyok most? </p>
+      <p class="h2">4. Hány éves leszek 10 év múlva ha 19 éves vagyok most? </p>
       <form><input type="text" id="1"> </form>
 
       <hr style="width:100%;text-align:left;margin-left:0">
 
-      <p class="h2">Hány éves voltam 10 évvel ezelőtt ha most 19 vagyok?</p>
+      <p class="h2">5. Hány éves voltam 10 évvel ezelőtt ha most 19 vagyok?</p>
       <form><input type="text" id="2"> </form>
 
 
