--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -17,7 +17,7 @@
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
     <p class="h2">1. Mi Portugália fővárosa</p>
-    <select nev="fovarosa" Size="7">
+    <select nev="fovarosa" Size="7" id="fovarosa">
         <option>Pécs</option>
         <option>Balassagyarmat</option>
         <option>Miskolc</option>
@@ -66,7 +66,7 @@
       <hr style="width:100%;text-align:left;margin-left:0">
 
 
-      <button type="button" class="btn btn-danger">Teszt lezárása és válaszok beküldése</button>
+      <button type="button" class="btn btn-danger"Teszt lezárása és válaszok beküldése</button>
 
       <span id="válaszok"> </span>
 
