--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -18,10 +18,10 @@
 
     <p class="h2">1. Mi Portugália fővárosa</p>
     <select nev="fovarosa" Size="7" id="fovarosa">
-        <option>Pécs</option>
-        <option>Balassagyarmat</option>
-        <option>Miskolc</option>
-        <option>Lisszabon</option>
+        <option id="Pécs" value="Hamis">Pécs</option>
+        <option id="Balassagyarmat" value="Hamis">Balassagyarmat</option>
+        <option id="Miskolc" value="Hamis" >Miskolc</option>
+        <option id="Lisszabon" value="Igaz">Lisszabon</option>
 
     </select>
 
