--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -66,7 +66,7 @@
       <hr style="width:100%;text-align:left;margin-left:0">
 
 
-      <button type="button" class="btn btn-danger"Teszt lezárása és válaszok beküldése</button>
+      <button type="button" class="btn btn-danger">Teszt lezárása és válaszok beküldése"</button>
 
       <span id="válaszok"> </span>
 
